# roulette

./: .]  .gitignore  Cargo.toml  README.md  credits.txt  main.rs  roulette
.cargo/: config.toml
binaries/: roulette  roulette_apple
src/: dealer.rs  lib.rs  local_ratatui.rs  main.rs  player.rs
txt_files/: credits.txt  help.txt  liability.txt
