[package]
name = "roulette"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clearscreen = "3.0.0"
crossterm = "0.27.0"
ctrlc = "3.4.4"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
kira = "0.9.3"
mp3-duration = "0.1.10"
rand = "0.8.5"
rodio = "0.19.0"
symphonia = "0.5.4"
symphonia-core = "0.5.4"


[package.metadata.clippy]
warn = ["pedantic"]
