[package]
name = "roulette"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clearscreen = "3.0.0"
crossterm = "0.27.0"
ctrlc = "3.4.4"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
lazy_static = "1.5.0"
once_cell = "1.19.0"
rand = "0.8.5"
rodio = "0.19.0"

[package.metadata.clippy]
warn = ["pedantic"]
