[package]
name = "roulette"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clearscreen = "3.0.0"
crossterm = "0.27.0"
ctrlc = "3.4.4"
itertools = "0.13.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
rand = "0.8.5"
ratatui = "0.27.0"
rodio = "0.19.0"


[package.metadata.clippy]
warn = ["pedantic"]
